--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="/">Home <i class="fa fa-home"></i><span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
